# TerminalOS

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: main.rs
crates/agent/: Cargo.toml
crates/agent/src/: action.rs  command.rs  git_assistant.rs  lib.rs  prompts.rs  session.rs  tools.rs
crates/ai/: Cargo.toml
crates/ai/src/: engine.rs  lib.rs  message.rs  provider.rs  sse.rs
crates/ai/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compatible.rs
crates/config/: Cargo.toml
crates/config/benches/: keybinding.rs
crates/config/src/: keybinding.rs  keybindings.rs  lib.rs  loader.rs  profiles.rs  settings.rs  setup.rs  themes.rs
crates/config/tests/: snapshots.rs
crates/config/tests/snapshots/: snapshots__binding_map.snap  snapshots__builtin_theme_names.snap  snapshots__default_config_toml.snap  snapshots__default_keybindings_toml.snap  snapshots__dracula_theme.snap
crates/core/: Cargo.toml
crates/core/src/: app.rs  lib.rs  traits.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: lib.rs  ops.rs  tree.rs  watcher.rs
crates/git/: Cargo.toml
crates/git/src/: blame.rs  conflict.rs  diff.rs  health.rs  lib.rs  repo.rs  staging.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: indexer.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  store.rs
crates/plugin/: Cargo.toml
crates/plugin/assets/: plugin-marketplace.json
crates/plugin/src/: api.rs  dynamic.rs  lib.rs  loader.rs  manager.rs  marketplace.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  messages.rs
crates/search/: Cargo.toml
crates/search/benches/: search.rs
crates/search/src/: chunk.rs  embeddings.rs  engine.rs  hybrid.rs  lib.rs  parser.rs  vector.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  ids.rs  lib.rs  log.rs  theme.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: buffer.rs  emulator.rs  history.rs  keys.rs  layout.rs  lib.rs  manager.rs  pty.rs  session.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  event.rs  layout.rs  lib.rs  markdown.rs  theme.rs
crates/ui/src/components/: chat_pane.rs  logs_pane.rs  mod.rs  provider_picker.rs  sidebar.rs  status_bar.rs  tabs.rs  terminal_pane.rs
crates/ui/tests/: snapshots.rs
crates/ui/tests/snapshots/: snapshots__full_layout.snap  snapshots__minimal_layout.snap  snapshots__status_bar.snap
crates/workspace/: Cargo.toml
crates/workspace/src/: id.rs  lib.rs  manager.rs  snapshot.rs  store.rs
docs/: ARCHITECTURE.md  ROADMAP.md
docs/src/: SUMMARY.md  architecture.md  configuration.md  developer.md  introduction.md  quickstart.md  roadmap.md  shortcuts.md
plugins/hello/: Cargo.toml  plugin.toml
plugins/hello/src/: lib.rs
scripts/hooks/: commit-msg
xtask/: Cargo.toml
xtask/src/: main.rs
