[package]
name = "terminalos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "TerminalOS — The AI-native terminal for developers."
default-run = "terminalos"

[[bin]]
name = "terminalos"
path = "src/main.rs"

[dependencies]
clap.workspace = true
terminalos-config.workspace = true
terminalos-core.workspace = true
terminalos-shared.workspace = true
terminalos-ui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
