[package]
name = "terminalos-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "AI provider abstractions for TerminalOS."

[dependencies]
futures-util = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
terminalos-config.workspace = true
terminalos-shared.workspace = true
thiserror.workspace = true
tokio.workspace = true
