[package]
name = "terminalos-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Configuration management for TerminalOS."

[dependencies]
crossterm.workspace = true
dotenvy = "0.15"
serde.workspace = true
terminalos-shared.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
criterion.workspace = true
insta = { workspace = true, features = ["toml"] }
tempfile = "3.14"

[[bench]]
name = "keybinding"
harness = false
