[package]
name = "terminalos-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Git operations for TerminalOS."

[dependencies]
git2.workspace = true
terminalos-shared.workspace = true
