[package]
name = "terminalos-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Plugin system for TerminalOS."

[dependencies]
libloading.workspace = true
serde.workspace = true
terminalos-shared.workspace = true
toml.workspace = true
