[package]
name = "terminalos-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "IPC protocol definitions for TerminalOS."

[dependencies]
serde.workspace = true
serde_json.workspace = true
terminalos-shared.workspace = true
uuid.workspace = true
