[package]
name = "terminalos-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Full-text search for TerminalOS."

[dependencies]
serde.workspace = true
tantivy.workspace = true
terminalos-shared.workspace = true

[dev-dependencies]
tempfile = "3.14"
