[package]
name = "terminalos-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Full-text search for TerminalOS."

[dependencies]
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
streaming-iterator = "0.1"
tantivy.workspace = true
terminalos-shared.workspace = true
tree-sitter.workspace = true
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.14"
tokio.workspace = true

[[bench]]
name = "search"
harness = false
