[package]
name = "terminalos-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Terminal emulator core for TerminalOS."

[dependencies]
arboard.workspace = true
crossterm.workspace = true
portable-pty.workspace = true
terminalos-shared.workspace = true
tokio.workspace = true
tracing.workspace = true
vt100.workspace = true

[dev-dependencies]
tempfile = "3.14"
