[package]
name = "terminalos-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Ratatui user interface for TerminalOS."

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
terminalos-config.workspace = true
terminalos-core.workspace = true
terminalos-filesystem.workspace = true
terminalos-shared.workspace = true
terminalos-terminal.workspace = true
terminalos-workspace.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
ratatui = { workspace = true, features = ["crossterm", "serde"] }
