[package]
name = "terminalos-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Ratatui user interface for TerminalOS."

[dependencies]
chrono.workspace = true
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
syntect.workspace = true
terminalos-agent.workspace = true
terminalos-ai.workspace = true
terminalos-config.workspace = true
terminalos-core.workspace = true
terminalos-filesystem.workspace = true
terminalos-memory.workspace = true
terminalos-plugin.workspace = true
terminalos-shared.workspace = true
terminalos-terminal.workspace = true
terminalos-workspace.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
ratatui = { workspace = true, features = ["crossterm", "serde"] }
