[package]
name = "terminalos-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Workspace management for TerminalOS."

[dependencies]
serde.workspace = true
serde_json.workspace = true
terminalos-git.workspace = true
terminalos-shared.workspace = true
