[package]
name = "terminalos-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Workspace management for TerminalOS."

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
terminalos-git.workspace = true
terminalos-shared.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.14"
tokio.workspace = true
